fix: pass extensionId when logging
